# qsamegame

./: CMakeLists.txt  build.bat  main.cpp  qsamegamercc.qrc  samegame.qml
example/game3/: samegame4.qmlproject.qtds  view.md
